Change the preferences icons
Now uses ikonli. Also add preliminary transfer settings.